# cleanup-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  WINDOWS_SYSTEM_CLEANUP.md  pyproject.toml  windows-system-clean.bat
src/cleanup_tool/: app.py  cli.py  config.py  exceptions.py  interfaces.py  logging_utils.py  orchestrator.py
src/cleanup_tool/cleaning/: __init__.py  cleaner.py
src/cleanup_tool/domain/: __init__.py  models.py
src/cleanup_tool/reporting/: __init__.py  html_reporter.py  markdown_reporter.py
src/cleanup_tool/rules/: __init__.py  windows.py
src/cleanup_tool/scanning/: __init__.py  scanner.py
src/cleanup_tool/system/: __init__.py  summary_service.py  system_info.py
src/cleanup_tool/templates/: html_report.html  interactive_report.html
src/cleanup_tool/web/: __init__.py  server.py
